--- a/hw2/services.html
+++ b/hw2/services.html
@@ -1,6 +1,6 @@
 <html lang="en">
 <head>
-  <title>Date Night</title>
+  <title>Date Night LLC</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
   <link rel="stylesheet" href="main.css">
