--- a/joes-hotdog.html
+++ b/joes-hotdog.html
@@ -17,9 +17,9 @@
         var numHotdogs, numFries, numDrinks, subtotal;
         var discount = 0.90, MassTax = 1.0625, hotdogsPrice = 3.75, friesPrice = 2.00, drinksPrice = 1.80;
 
-        numHotdogs = prompt("How many hot dogs do you want?", "Enter a numeric value");
-        numFries = prompt("How many orders of French Fries do you want?", "Enter a numeric value");
-        numDrinks = prompt("How many drinks do you want?", "Enter a numeric value");
+        numHotdogs = prompt("How many hot dogs do you want?", "0");
+        numFries = prompt("How many orders of French Fries do you want?", "0");
+        numDrinks = prompt("How many drinks do you want?", "0");
 
         var hotdogs_sub = numHotdogs * hotdogsPrice;
         var fries_sub = numFries * friesPrice;
