--- a/jade-delight.html
+++ b/jade-delight.html
@@ -233,7 +233,7 @@ function submit_validation(){
     }
     order_value += "</table><br>";
     order_value += ("<div>Subtotal: $" + document.getElementById("subtotal").value + "</div>");
-    order_value += ("<div>Tax: $" + document.getElementById("tax").value + "</div>");
+    order_value += ("<div>Mass Tax: $" + document.getElementById("tax").value + "</div>");
     order_value += ("<div>Total: $" + document.getElementById("total").value + "</div>");
     order_value += ("<div><h4>Your order will be ready at: " + orderTime + "hrs </h4></div>");
     order_details.document.write(order_value);
